# rupia

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
.hooks/: pre-commit
config/: skill.toml
crates/rupia/: Cargo.toml
crates/rupia-cli/: Cargo.toml
crates/rupia-cli/src/: main.rs
crates/rupia-core/: Cargo.toml
crates/rupia-core/benches/: throughput.rs
crates/rupia-core/src/: ave.rs  boundary.rs  coerce.rs  diagnostic.rs  feedback.rs  fetch.rs  field.rs  format.rs  guard.rs  harness.rs  lenient.rs  lib.rs  llm.rs  random.rs  registry.rs  schema_ops.rs  schema_util.rs  sync.rs  task_schemas.rs  types.rs  validator.rs
crates/rupia-core/src/embed/: error.rs  mmap_model.rs  mod.rs  model.rs  model2vec.rs
crates/rupia-derive/: Cargo.toml
crates/rupia-derive/src/: lib.rs
crates/rupia/src/: lib.rs
crates/rupia/tests/: e2e.rs
docs/: rupia-architecture.md
examples/go-integration/: main.go
experiments/: benchmark-v0.2.txt
skill/: SKILL.md
skill/references/: cli-usage.md  error-codes.md  modules.md  rust-api.md
