[package]
name = "rupia-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
thiserror.workspace = true
regex-lite = "0.1"
jsonschema = "0.28"

[dev-dependencies]
serde.workspace = true
schemars.workspace = true
tokio.workspace = true
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "throughput"
harness = false

[lints]
workspace = true
