[package]
name = "rupia"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "LLM output validation harness — lenient parsing, schema coercion, structured feedback for self-healing loops"

[dependencies]
rupia-core = { path = "../rupia-core", version = "0.2.0" }
rupia-derive = { path = "../rupia-derive", version = "0.2.0" }
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
tokio.workspace = true

[lints]
workspace = true
